--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,22 @@
-# Compiled class file
-*.class
+# Byte-compiled / cached files
+__pycache__/
+*.py[cod]
 
-# Log file
+# Virtual environment
+venv/
+env/
+*.egg-info/
+
+# Logs
 *.log
 
-*.pyc 
+# IDE settings
+.vscode/
+.idea/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
+# Packaging artifacts
 *.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/.idea/
+*.zip
+*.whl
+dist/
+build/
